# mirror-switch

./: README.md  build.sh  pyproject.toml  uv.toml
dist_site/: index.html  run.ps1  run.sh
mirror_switch/: __init__.py  config.py  main.py  mirrors.json
